--- a/Personal Web/mystyle.css
+++ b/Personal Web/mystyle.css
@@ -215,6 +215,18 @@
  }
 
  /* Portfolio Section */
+#web{
+    margin-bottom: 20px;
+}
+.portfolio-tabs{
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+}
+.portfolio-tabs a{
+    margin: 0px 10px;
+}
  .portfolio-grid {
      display: grid;
      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -253,12 +265,19 @@
  .portfolio-info {
      padding: 20px;
  }
+ .portfolio-info a{
+    padding: 8px 15px;
+    font-size: 0.9rem;
+ }
 
  .portfolio-info h3 {
      margin-bottom: 10px;
      color: var(--harvard-crimson);
  }
 
+ #matrimonial{
+    margin-bottom: 20px;
+ }
  /* Calculator Styles */
  .calculator {
      background-color: white;
